plang/testing/logs/false-incorrect/67/program67.p.p
jIckt N Ez1b3 (J2) :- wgX; uAQ7 edaNd kA3E7 (AC) OcoO.
juK.


? (((mFcts, aH6fa (viEgc yGg (PGCG) (P)) (g OvY (ALS)) Svf7E), w7OJI (hv eRg5u (mpA4 (LNVkf) F8a N) b))).